--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,7 @@ url=git@github.com:peter-iakovlev/Signals.git
 url=https://github.com/LMDB/lmdb.git
 [submodule "submodules/elements"]
 	path = submodules/elements
-	url = git@bitbucket.org:iakovlevpeterp/elements.git
+	url = https://bitbucket.org/iakovlevpeterp/elements.git
+[submodule "thirdparty/pop"]
+	path = thirdparty/pop
+	url = https://github.com/facebook/pop.git
