--- a/.gitmodules
+++ b/.gitmodules
@@ -3,13 +3,16 @@
 	url = https://github.com/skywinder/ActionSheetPicker-3.0.git
 [submodule "thirdparty/SSignalKit"]
 	path = thirdparty/SSignalKit
-url=https://github.com/peter-iakovlev/Signals.git
+url=git@github.com:peter-iakovlev/Signals.git
+[submodule "thirdparty/sqlcipher"]
+	path = thirdparty/sqlcipher
+	url = https://github.com/sqlcipher/sqlcipher.git
 [submodule "Share/submodules/lmdb"]
 	path = Share/submodules/lmdb
-	url = https://gitorious.org/mdb/mdb.git
+url=https://github.com/LMDB/lmdb.git
 [submodule "submodules/elements"]
 	path = submodules/elements
-	url = git@bitbucket.org:iakovlevpeterp/elements.git
-[submodule "submodules/MtProtoKit"]
-	path = submodules/MtProtoKit
-	url = git@github.com:iakovlev-peter/MtProtoKit.git
+	url = https://bitbucket.org/iakovlevpeterp/elements.git
+[submodule "thirdparty/pop"]
+	path = thirdparty/pop
+	url = https://github.com/facebook/pop.git
